--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,4 +11,8 @@
         android:title="@string/action_erase"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_dl_path"
+        android:title="@string/action_dl_path"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
